2012-01-11    <simleo@neuron.crs4.it>

	* bl/vl/individual/pedigree.py (down_propagate_front): fixed a bug
	where the children dict was being looked up by individual id
	instead of individual.

2011-12-21  Luca Lianas  <luca@tensa-zangetsu>

	* bl/vl/kb/drivers/omero/wrapper.py: the __getattr__ of the kb
	objects will now resolve encapsulated objects reading them
	directly from the cache or from Omero.

2011-11-22  Luca Lianas  <luca@tensa-zangetsu>

	* bl/vl/kb/drivers/omero/proxy.py: added a method for retrieving
	all vessels related to an individual.

2011-11-22    <simleo@neuron.crs4.it>

	* bl/vl/kb/drivers/omero/proxy.py: added a method for getting a
	container object by label.

2011-11-04    <zag@manzanillo>

	* bl/vl/genotype/algo.py (hwe_probabilites): bugfx: Added handling
	of the n_a ==0 corner case.

2011-11-02    <zag@manzanillo>

	* bl/vl/kb/drivers/omero/admin.py (Admin): Added basic admin support.

	* bl/vl/kb/drivers/omero/proxy.py (Proxy.create_markers): Added
	ref_rs_genome, dbsnp_build

2011-11-01    <zag@manzanillo>

	* bl/vl/kb/drivers/omero/proxy.py (Proxy.__init__): Added group
	support. It can be set at initialization and run time with a new
	change_group method.

2011-10-31    <zag@manzanillo>

	* galaxy/tools/VL/importer/data_sample.xml: It could happen that
	physicalLocation is None. 

	* bl/vl/kb/drivers/omero/genotyping.py
	(GenotypingAdapter.get_snp_markers_by_source): added a new
	markers list query method.

2011-10-28    <zag@manzanillo>

	* bl/vl/app/kb_query/map_vid.py
	(MapVIDApp.resolve_mapping_individual): Changed 
	behavior: it will skip records that cannot map.

2011-10-28    <simleo@neuron.crs4.it>

	* bl/vl/app/importer/marker_definition.py (Recorder.record):
	manufacturer's label is now treated as the unique marker row
	attribute.

	* bl/vl/app/kb_query/map_vid.py
	(MapVIDApp.resolve_mapping_marker): changed back to expect chip
	manufacturer's labels instead of rs_labels for mapping to VIDs.
