@@ -1,5 +1,3 @@
-# BEGIN_COPYRIGHT
-# END_COPYRIGHT
 
 try:
   from version import version as __version__
