@@ -97,3 +97,7 @@ class SNPMarkersSet(wp.OmeroWrapper):
       raise ValueError('markers vector has not been reloaded.')
     self.proxy.update_snp_positions(self.markers, ref_genome)
     self.bare_setattr('ref_genome', ref_genome)
+
+  def __update_constraints__(self):
+    uk = make_unique_key(self.maker, self.model, self.release)
+    setattr(self.ome_obj, 'snpMarkersSetUK', uk)
