@@ -59,3 +59,9 @@ class PlateWell(Vessel):
       slot   = conf['slot']
       conf['containerSlotIndexUK'] = make_unique_key(clabel, '%04d' % slot)
     return conf
+
+  def __update_constraints__(self):
+    csl_uk = make_unique_key(self.container.label, self.label)
+    setattr(self.ome_obj, 'containerSlotLabelUK', csl_uk)
+    csi_uk = make_unique_key(self.container.label, '%04d' % self.slot)
+    setattr(self.ome_obj, 'containerSlotIndexUK', csi_uk)
