@@ -207,6 +207,7 @@ class MetaWrapper(type):
         setattr(self.ome_obj, k, self.to_omero(fields[k][0], v))
       else:
         base.__setattr__(self, k, v)
+      self.__update_constraints__()
     return setter
 
   @classmethod
@@ -303,6 +304,9 @@ class OmeroWrapper(CoreOmeroWrapper):
 
   def __preprocess_conf__(self, conf):
     return conf
+
+  def __update_constraints__(self):
+    pass
 
   def configure(self, conf):
     self.__config__(self.ome_obj, conf)
