@@ -1,5 +1,3 @@
-# BEGIN_COPYRIGHT
-# END_COPYRIGHT
 
 """
 Biobank: large scale biomedical computation on OMERO.
